fun: fix lmgtfy url with special characters
Signed-off-by: kdrag0n <dragon@khronodragon.com>